--- a/unb-gama/stylesheets/header.scss
+++ b/unb-gama/stylesheets/header.scss
@@ -4,7 +4,7 @@
   position: relative;
 
   #portal-logo {
-    background: url(images/logo.png) no-repeat center/100%;
+    background: url(../images/logo.png) no-repeat center/100%;
     height: 80px;
     width: 15%;
     left: 10%;
